# cipher-bot

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  cipher.service.example  pyproject.toml  requirements.txt  run.py
bot/: __init__.py  main.py
bot/data/: config.py  data.py
bot/data/texts/: about.py  key_description.py  main.py
bot/database/: __init__.py  db.py  models.py  redis.py  requests.py
bot/filters/: __init__.py  admin.py  keys.py  main.py
bot/handlers/: __init__.py
bot/handlers/admin/: main.py
bot/handlers/user/: base.py  ciphers.py  hash.py
bot/keyboards/: __init__.py  callback_data.py  menu.py  other.py
bot/middlewares/: __init__.py  antiflood.py
bot/misc/: __init__.py  ciphers.py  utils.py
bot/models/: __init__.py  models.py
migration/: env.py
migration/versions/: sql.dump
migrations/: env.py
migrations/versions/: b8fd50d17cae_init.py
tests/: ciphers_test.py
