[tool.poetry]
name = "cipher-bot"
version = "0.1.0"
description = "Telegram bot for encrypting and hashing data"
authors = ["theakopov <theakopov@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b7"
pycryptodome = "3.18.0"
alembic = "^1.12.0"
redis = "4.5.5"
sqlalchemy = "2.0.16"
python-dotenv = "1.0.0"
pydantic = "1.10.9"
asyncpg = "0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
psycopg2-binary = "2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
